List farms irrespective of active status and add zone support
